--- a/src/main/webapp/tds/web-app/css/page/module/user/user-dashboard.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/user/user-dashboard.component.sass
@@ -1,3 +1,9 @@
 .user-dashboard-component
   width: 97%
-  margin: 0 auto
+  margin: 24px auto 24px auto
+  .k-grid
+    margin-top: 24px
+  tr.k-detail-row > .k-hierarchy-cell
+    border-right: 0
+  tr.k-detail-row div
+    display: inline
