TM-14396 - Fixed remaining small UI issues.

--- a/src/main/webapp/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
@@ -1,5 +1,5 @@
 <!-- Main content -->
-<div class="content body tds-kendo-grid license-admin-list-component">
+<div class="content body tds-kendo-grid notice-list-component">
     <section>
         <div *ngIf="noticeColumnModel">
             <div class="box-body box-with-empty-header">
