--- a/src/main/webapp/tds/web-app/css/page/module/noticeManager/view-html-component.scss
+++ b/src/main/webapp/tds/web-app/css/page/module/noticeManager/view-html-component.scss
@@ -1,3 +1,13 @@
+.notice-list-component {
+  .button-create-license {
+    margin-left: 16px
+  }
+
+  .k-grid-norecords td {
+    cursor: inherit !important;
+  }
+}
+
 .notice-view-html-content {
   .modal-body {
     min-height: 282px;
