--- a/src/main/webapp/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
@@ -7,14 +7,14 @@
         <form name="noticeForm" role="form" data-toggle="validator" class="form-horizontal left-alignment" #noticeForm='ngForm'>
             <div class="box-body">
                 <div class="form-group">
-                    <label for="inputTitle" class="col-sm-2 control-label">Title: <span class="required_field">*</span></label>
+                    <label for="inputTitle" class="col-sm-2 control-label">Title: <span style="color: red;">*</span></label>
                     <div class="col-sm-10">
                         <input type="text" name="title" id="inputTitle" class="form-control" placeholder="Notice Title" [(ngModel)]="model.title"
                             required>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="selectType" class="col-sm-2 control-label">Type: <span class="required_field">*</span></label>
+                    <label for="selectType" class="col-sm-2 control-label">Type: <span style="color: red;">*</span></label>
                     <div class="col-sm-10">
                         <kendo-dropdownlist #typeIdField="kendoDropDownList" [defaultItem]="defaultItem" [data]="typeDataSource" [textField]="'name'"
                             [valueField]="'typeId'" [valuePrimitive]="true" id="selectType" class="form-control" [(value)]="model.typeId"
@@ -32,6 +32,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-12">
+                        <span style="color: red;">*</span>
                         <rich-text-editor
                             #htmlTextField="richTextEditor"
                             [elementId]="'htmlText'"
