TM-14343 Remove inline function to get grid state
Pass rather input properties

--- a/web-app/tds/web-app/app-js/modules/fieldSettings/components/list/field-settings-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/fieldSettings/components/list/field-settings-list.component.html
@@ -18,8 +18,9 @@
 							                     (share)="onShare($event)"
 							                     (delete)="onDelete($event)"
 							                     (filter)="onFilter()"
-							                     [data]="value"
-							                     [state]="getCurrentState(value)">
+							                     [isEditable]="isEditable"
+							                     [gridFilter]="filter"
+							                     [data]="value">
 							</field-settings-grid>
 						</div>
 						<!-- /.tab-pane -->
