--- a/web-app/tds/web-app/app-js/modules/fieldSettings/components/grid/field-settings-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/fieldSettings/components/grid/field-settings-grid.component.html
@@ -4,7 +4,7 @@
 		        (change)="onFilter()"
 		        name="fieldType"
 		        id="type"
-		        [(ngModel)]="gridState.filter.fieldType">
+		        [(ngModel)]="gridFilter.fieldType">
 			<option *ngFor="let t of availableFieldTypes" [ngValue]="t">{{t}}</option>
 		</select>
 	</div>
@@ -14,7 +14,7 @@
 			       class="form-control searchFilterInput"
 			       (keyup.enter)="onFilter()"
 			       name="search"
-			       [(ngModel)]="gridState.filter.search"
+			       [(ngModel)]="gridFilter.search"
 			       placeholder="{{'FIELD_SETTINGS.ENTER_FIELD_NAME_FILTER' | translate}}"
 			       value="">
 			<span style="cursor:pointer;color:#000;pointer-events:all"
@@ -56,7 +56,7 @@
 			            'btn-danger': isDirty && formHasError
 			        }"
 			        id="btnSaveAll"
-			        [disabled]="!gridState.editable || !isDirty || formHasError"
+			        [disabled]="!isEditable || !isDirty || formHasError"
 			        (click)="onSaveAll()">
 					<i class="fa fa-fw fa-floppy-o"></i> {{'GLOBAL.SAVE_ALL' | translate}}
 			</button>
@@ -88,7 +88,7 @@
 			<button type="button"
 			        class="btn btn-default"
 			        id="btnEdit"
-			        [disabled]="!gridState.editable"
+			        [disabled]="!isEditable"
 			        (click)="onEdit()">
 				<i class="fa fa-fw fa-list-ul"></i> {{'GLOBAL.EDIT' | translate}}
 			</button>
@@ -177,7 +177,7 @@
 		             *ngIf="isEditing"
 		             let-dataItem>
 			<!--'has-error': hasError(dataItem),-->
-			<input (blur)="onBlur(dataItem, $event)"
+			<input (blur)="onLabelBlur(dataItem, $event)"
 			       (keyup)="onKeyPressed($event)"
 			       type="text"
 			       [ngClass]="{
