TM-14178 Update the color for the disabled tabs
It was set to a light gray in order to make easy idetify the disabled state

--- a/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
+++ b/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
@@ -69,8 +69,12 @@
       margin-bottom: -12px
       .collapse-icon-wrapper
         text-align: right
-  .tab-disabled
-    cursor: not-allowed
+  .nav-tabs-custom
+    .nav-tabs
+      li
+        a.tab-disabled
+          color: $color-font-disabled--gray
+          cursor: not-allowed
   .k-widget.ng-invalid
     .k-input
       color: gray
