--- a/src/main/webapp/tds/web-app/app-js/modules/user/components/dashboard/user-dashboard.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/user/components/dashboard/user-dashboard.component.html
@@ -10,7 +10,8 @@
                         [data]="eventList"
                         [selectable]="true">
                     <ng-template kendoGridToolbarTemplate>
-                        <span>Events - Your assigned events and your team</span>
+                        <img src="/tdstm/assets/icons/calendar.png"/>
+                        <strong>Events</strong> <span> - Your assigned events and your team</span>
                         <div class="kendo-grid-toolbar__refresh-btn" (click)="fetchEventsForGrid()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
                     </ng-template>
 
@@ -35,10 +36,25 @@
                         [selectable]="true"
                         style="max-height: 400px">
                     <ng-template kendoGridToolbarTemplate>
-                        <span>Task Summary - Active tasks assigned to you</span>
+                        <img src="/tdstm/assets/icons/table.png"/>
+                        <strong>Task Summary</strong> <span> - Active tasks assigned to you</span>
                         <div class="kendo-grid-toolbar__refresh-btn" (click)="fetchTasksForGrid()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
                     </ng-template>
 
+                    <div *kendoGridDetailTemplate="let dataItem, let rowIndex = rowIndex">
+                            <div>
+                                <button class="btn btn-primary" *ngIf="dataItem.status!='Started' && dataItem.status!='Completed'" (click)="updateTaskStatus(dataItem.taskId,'Started')">Start</button>
+                                <button class="btn btn-primary" *ngIf="dataItem.status!='Completed'" (click)="updateTaskStatus(dataItem.taskId,'Completed')">Done</button>
+                                <button class="btn btn-primary" (click)="openTaskDetailView(dataItem)">Details...</button>
+                            </div>
+                            <div *ngIf="dataItem.status=='Ready' && !movedayCategories.includes(dataItem.category)">
+                                <span style="margin-right:16px">Delay for:</span>
+                                <button class="btn btn-primary" (click)="changeTimeEst(dataItem.taskId,1)">1 day</button>
+                                <button class="btn btn-primary" (click)="changeTimeEst(dataItem.taskId,2)">2 day</button>
+                                <button class="btn btn-primary" (click)="changeTimeEst(dataItem.taskId,7)">7 day</button></div>
+                            <button *ngIf="dataItem.successors > 0 || dataItem.predecessors > 0" (click)="openLinkInNewTab('../task/taskGraph?neighborhoodTaskId=' + dataItem.taskId)" class="btn btn-primary">Neighborhood</button>
+                            <button *ngIf="dataItem.parsedInstructions" class="btn btn-primary" (click)="openLinkInNewTab(dataItem.parsedInstructions[1])">{{dataItem.parsedInstructions[0]}}</button>
+                    </div>
                     <!-- Configured View Columns (*ngFor) -->
                     <kendo-grid-column *ngFor="let column of taskColumnModel.columns"
                                        field="{{column.property}}"
@@ -47,22 +63,6 @@
                         <ng-template kendoGridHeaderTemplate>
                             <div>
                                 <label>{{column.label}}</label>
-                            </div>
-                        </ng-template>
-                        <ng-template kendoGridDetailTemplate let-dataItem let-rowIndex="rowIndex">
-                            <div>
-                                <div>
-                                    <button *ngIf="dataItem.status!='Started' && dataItem.status!='Completed'" (click)="updateTaskStatus(dataItem.taskId,'Started')">Start</button>
-                                    <button *ngIf="dataItem.status!='Completed'" (click)="updateTaskStatus(dataItem.taskId,'Completed')">Done</button>
-                                    <button (click)="openTaskDetailView(dataItem)">Details...</button>
-                                </div>
-                                <div *ngIf="dataItem.status=='Ready' && !movedayCategories.includes(dataItem.category)">
-                                    <span>Delay For: </span>
-                                    <button (click)="changeTimeEst(dataItem.taskId,1)">1 day</button>
-                                    <button (click)="changeTimeEst(dataItem.taskId,2)">2 day</button>
-                                    <button (click)="changeTimeEst(dataItem.taskId,7)">7 day</button></div>
-                                <div *ngIf="dataItem.successors > 0 || dataItem.predecessors > 0" (click)="openLinkInNewTab('../task/taskGraph?neighborhoodTaskId=' + dataItem.taskId)"><button>Neighborhood</button></div>
-                                <button *ngIf="dataItem.parsedInstructions" (click)="openLinkInNewTab(dataItem.parsedInstructions[1])">{{dataItem.parsedInstructions[0]}}</button>
                             </div>
                         </ng-template>
                     </kendo-grid-column>
@@ -74,7 +74,8 @@
                         [data]="eventNewsList"
                         [selectable]="true">
                     <ng-template kendoGridToolbarTemplate>
-                        <span>Event News - Active news for your events</span>
+                        <img src="/tdstm/assets/icons/newspaper.png"/>
+                        <strong>Event News</strong> <span> - Active news for your events</span>
                         <div class="kendo-grid-toolbar__refresh-btn" (click)="fetchEventNewsForGrid()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
                     </ng-template>
 
@@ -88,13 +89,20 @@
                                 <label>{{column.label}}</label>
                             </div>
                         </ng-template>
+                        <ng-template kendoGridCellTemplate let-dataItem let-column="column">
+                            <span *ngIf="column.field == 'event'"><a [href]="'/tdstm/dashboard/index?moveEvent=' + dataItem['eventId']">{{dataItem[column.field]}}</a></span>
+                            <span *ngIf="column.field != 'event'">{{ dataItem[column.field] }}</span>
+                        </ng-template>
                     </kendo-grid-column>
                 </kendo-grid>
                 <kendo-grid
                         [data]="applicationList"
-                        [selectable]="true">
+                        [selectable]="true"
+                        (cellClick)="handleApplicationClicked($event)"
+                        class="clickable-grid">
                     <ng-template kendoGridToolbarTemplate>
-                        <span>Applications - Your applications as an SME or Owner</span>
+                        <img src="/tdstm/assets/icons/svg/application_menu.svg" width="16" height="16"/>
+                        <strong>Applications</strong> <span> - Your applications as an SME or Owner</span>
                         <div class="kendo-grid-toolbar__refresh-btn" (click)="fetchApplicationsForGrid()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
                     </ng-template>
 
@@ -113,9 +121,12 @@
 
                 <kendo-grid
                         [data] = "activePersonList"
-                        [selectable]="true">
+                        [selectable]="true"
+                        (cellClick)="handlePersonClicked($event)"
+                        class="clickable-grid">
                     <ng-template kendoGridToolbarTemplate>
-                        <span>Active People - Currently active people on this project</span>
+                        <img src="/tdstm/assets/icons/group.png"/>
+                        <strong>Active People</strong><span> - Currently active people on this project</span>
                         <div class="kendo-grid-toolbar__refresh-btn" (click)="fetchPeopleForGrid()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
                     </ng-template>
 
