TM-14128 - Resized dialog to fix alignment problem

--- a/src/main/webapp/tds/web-app/app-js/modules/assetComment/components/view-edit/asset-comment-view-edit.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/assetComment/components/view-edit/asset-comment-view-edit.component.html
@@ -1,6 +1,6 @@
 <div tds-handle-escape (escPressed)="cancelCloseDialog()" class="asset-comment-view-edit-component modal fade in" id="asset-comment-view-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-md" role="document">
-		<div class="modal-content resizable" [style.width.px]="500">
+		<div class="modal-content resizable">
 			<div class="modal-header">
 				<button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
 					<span aria-hidden="true">×</span>
