--- a/src/main/webapp/tds/web-app/css/page/module/assetExplorer/launch-page.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/assetExplorer/launch-page.sass
@@ -50,6 +50,8 @@ section.page-asset-explorer-index
           cursor: pointer
           span
             color: $color-material--blue1
+        th.no-action
+          cursor: default
         td.asset-explorer-td-actions
           width: 125px
           .btn
