--- a/web-app/css/page/module/datacenters/rackLayout.sass
+++ b/web-app/css/page/module/datacenters/rackLayout.sass
@@ -4,6 +4,9 @@ div.content-wrapper
       div.dialog
         div.action-wrapper
           text-align: right
+          position: absolute
+          bottom: 0px
+          right: 0px
           margin-top: 5px
           margin-right: 10px
           margin-bottom: 10px
