--- a/web-app/components/cookbook/generation/task-generation-start-template.html
+++ b/web-app/components/cookbook/generation/task-generation-start-template.html
@@ -6,7 +6,7 @@
 			<div class="col-sm-6 col-md-3 col-lg-3">
 				<div class="form-group">
 					<label class="col-title" for="eventSelect">Event:</label>
-					<select class="form-control" name="eventSelect" id="eventSelect" ng-model="contexts.selectedEvent" ng-change="contexts.eventSelected()" ng-options="item as item.name for item in contexts.eventsArray">
+					<select class="form-control" name="eventSelect" id="eventSelect" ng-model="contexts.selectedEvent" ng-change="contexts.eventSelected(true)" ng-options="item as item.name for item in contexts.eventsArray">
 						<option value="">Please select</option>
 					</select>
 				</div>
@@ -31,13 +31,13 @@
 			<input type="checkbox" name="autoPublishTasks" id="autoPublishTasks" ng-model="tasks.generateOpts.autoPublish">
 			Automatically publish tasks
 		</label>
-	</div>	
-	<div ng-show="currentSelectedRecipe.hasWIP">	
+	</div>
+	<div ng-show="currentSelectedRecipe.hasWIP">
 		<label for="generateUsingWIP">
 			<input type="checkbox" name="generateUsingWIP" id="generateUsingWIP" ng-model="tasks.generateOpts.useWIP">
 			Generate using WIP recipe
 		</label>
-	</div>	
+	</div>
 	<div class="generateWrapper">
 		<label for="generateTask">
 			<a class="btn btn-default has-spinner component-action-generate-tasks" id="generateTask" ng-disabled="!contexts.validCurrentSelection" ng-click="tasks.generateTask(this)">
