TM-14320 Legacy and new Angular with the autocomplete off

--- a/web-app/tds/web-app/app-js/modules/user/components/manage-staff/user-manage-staff.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/manage-staff/user-manage-staff.component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="modal-body">
                 <div id="generalInfoShowId" class="person" >
-                    <form name="personDialogForm">
+                    <form name="personDialogForm" autocomplete="off">
                         <div class="dialog">
                             <div>
                                 <table class="personTable">
