--- a/web-app/tds/web-app/css/page/module/licenseAdmin/license-admin-list-component.sass
+++ b/web-app/tds/web-app/css/page/module/licenseAdmin/license-admin-list-component.sass
@@ -1,3 +1,6 @@
 .license-admin-list-component
   .button-create-license
     margin-left: 16px
+  .k-widget.k-dropdown
+    span
+      background-color: white
