--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
@@ -176,7 +176,9 @@
                         </a>
                     </li>
                     <li class="menu-child-item menu-parent-assets-comments-list">
-                        <a [routerLink]="['/assetcomment','list']">Comments</a>
+                        <a [routerLink]="['/assetcomment','list']">
+                            <img src="/tdstm/assets/icons/comments.png" width="16" height="16" alt="Comments"> Comments
+                        </a>
                     </li>
                     <li class="divider"></li>
                     <li *ngIf="hasPermission(permission.DepAnalyzerView)" class="menu-child-item menu-parent-assets-dependency-analyzer">
