--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/list/notice-list.component.html
@@ -20,6 +20,7 @@
                         [selectable]="true">
                     <ng-template kendoGridToolbarTemplate [position]="'top'">
                         <button class="btn btn-default button-create-license" type="button" (click)="onCreateNotice()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> {{ 'NOTICE.CREATE_NOTICE' | translate }}</button>
+                        <button class="btn btn-default button-create-license" type="button" (click)="onShowEULA()"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> EULAS </button>
                         <div (click)="reloadData()" class="kendo-grid-toolbar__refresh-btn"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
                     </ng-template>
                     <kendo-grid-column *ngFor="let column of noticeColumnModel.columns" field="{{column.property}}" format="{{column.format}}" [locked]="column.locked" [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
