TM-14129 - Added style to prevent wrapping on asset comments.

--- a/src/main/webapp/tds/web-app/css/page/index.sass
+++ b/src/main/webapp/tds/web-app/css/page/index.sass
@@ -1,6 +1,7 @@
 @import "module/assetComment/asset-comment-list.component"
 @import "module/assetExplorer/launch-page"
 @import "module/assetExplorer/report-config"
+@import "module/assetExplorer/task-comment.component"
 @import "module/assetExplorer/asset-dependency-component"
 @import "module/assetExplorer/asset-explorer-report-selector-component"
 @import "module/assetExplorer/asset-explorer-view-save-component"
