--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/eula/eula.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/eula/eula.component.html
@@ -1,56 +1,46 @@
-<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content">
-
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()"
+     class="modal-content notice-eula-html-content">
     <div class="modal-header">
         <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
         <h4 class="modal-title">{{'NOTICE.NOTICE' | translate }}</h4>
     </div>
 
     <div class="modal-body">
-        <form name="EULAForm"
+        <form name="form"
               role="form"
               data-toggle="validator"
               class="form-horizontal"
-              #EULAForm='ngForm'>
-	        <div style="padding-left: 20px; padding-right: 20px;">
+              #form='ngForm'>
+	        <div>
 		        <h4>{{model.name}}</h4>
-
 		        <div class="form-group">
-			        <div class="col-sm-12" style="height: 200px; overflow: auto; margin-top: 15px;">
+			        <div class="col-sm-12 html-container">
 				        <div [innerHTML]="model.htmlText"></div>
 			        </div>
 		        </div>
-
-		        <div class="form-group" style="display: flex; margin-top: 20px;">
-			        <input type="checkbox" name="agreement" id="agreement" value="value" style="cursor: pointer;" required>
-			        <label for="agreement" style="font-weight: normal; margin-left: 5px;"> By clicking Accept, you are agreeing to the terms above.</label>
+		        <div class="form-group" class="agreement-container">
+			        <input type="checkbox" name="agreement" id="agreement" [(ngModel)]="acceptAgreement">
+			        <label for="agreement"> {{'NOTICE.AGREEMENT' | translate}}</label>
 		        </div>
-
 	        </div>
-
-
         </form>
     </div>
 
     <div class="modal-footer form-group-center">
 	    <tds-button-custom
+			    (click)="onBack()"
 			    icon="chevron-left"
 			    title="Back"
 			    class="pull-left">
 	    </tds-button-custom>
 
 	    <tds-button-custom
+			    (click)="onNext()"
 			    icon="chevron-right"
 			    title="Next"
+			    [disabled]="!acceptAgreement"
 			    class="btn-primary pull-right">
 	    </tds-button-custom>
-
-	    <!--
-        <button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
-            <span class="glyphicon glyphicon-ban-circle"></span>
-            {{'GLOBAL.CANCEL' | translate }}
-        </button>
-        -->
-
     </div>
 
 </div>
