--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/view-edit/notice-view-edit.component.html
@@ -1,4 +1,4 @@
-<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content">
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content notice-edit-content">
     <div class="modal-header">
         <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
         <h4 class="modal-title">{{ (action === 0 ? 'NOTICE.CREATE_NOTICE':'NOTICE.EDIT_NOTICE') | translate }}</h4>
@@ -16,9 +16,18 @@
                 <div class="form-group">
                     <label for="selectType" class="col-sm-3 control-label">Type: <span class="required_field">*</span></label>
                     <div class="col-sm-9">
-                        <kendo-dropdownlist #typeIdField="kendoDropDownList" [defaultItem]="defaultItem" [data]="typeDataSource" [textField]="'name'"
-                            [valueField]="'typeId'" [valuePrimitive]="true" id="selectType" class="form-control" [(value)]="model.typeId"
-                            required>
+                        <!--[valuePrimitive]="true"-->
+                        <kendo-dropdownlist
+                                name="noticeType"
+		                        #typeIdField="kendoDropDownList"
+                                [defaultItem]="defaultItem"
+                                [data]="typeDataSource"
+                                [textField]="'name'"
+                                [valueField]="'typeId'"
+                                id="selectType"
+                                class="form-control"
+                                [(ngModel)]="model.noticeType"
+                                requiredComplexValue propertyName="typeId" required>
                         </kendo-dropdownlist>
                     </div>
                 </div>
@@ -33,19 +42,21 @@
                 <div class="form-group">
                     <label for="activationDate" class="col-sm-3 control-label">Activation Date:</label>
                     <div class="col-sm-9">
-                        <tds-datetime-control
+                        <tds-date-control
+                               id="activationDate"
                                name="activationDate"
                                [(ngModel)]="model.activationDate">
-                        </tds-datetime-control>
+                        </tds-date-control>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="expirationDate" class="col-sm-3 control-label">Expiration Date:</label>
                     <div class="col-sm-9">
-                        <tds-datetime-control
+                        <tds-date-control
+		                        id="expirationDate"
                                name="expirationDate"
                                [(ngModel)]="model.expirationDate">
-                        </tds-datetime-control>
+                        </tds-date-control>
                     </div>
                 </div>
 
@@ -66,6 +77,7 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="col-sm-12 control-label">Message: <span class="required_field">*</span> </label>
                     <div class="col-sm-12">
                         <rich-text-editor
                             #htmlTextField="richTextEditor"
@@ -75,6 +87,14 @@
                             [(rawValue)]="model.rawText"
                             [(value)]="model.htmlText">
                         </rich-text-editor>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="postMessageText" class="col-sm-12 control-label">Post Message Text:</label>
+	                <div class="col-sm-12">
+                        <input type="text" class="form-control"
+                               name="postMessageText" id="postMessageText"
+                               [(ngModel)]="model.title">
                     </div>
                 </div>
             </div>
